<resources>
    <string name="app_name">Ölkələr</string>
    <string name="title_olke_activity">OlkeActivity</string>
    <string name="olke">Ölkə</string>
    <string name="olke_adi"><b>OlkeAdi</b></string>
    <string name="action_settings">Haqqında</string>

    <string name="olke_title">Dünya ölkələri</string>
    <string name="paytaxt">Paytaxt</string>
    <string name="paytaxt_adi">Paytaxt Adi</string>
    <string name="ehali">Əhali</string>
    <string name="ehali_sayi">ehali_sayi</string>
    <string name="olke_adi_list">Olke adi</string>
    <string name="search_action">Search</string>
    <string name="search_hint">Axtar..</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="paytaxti_list">Paytaxti</string>
    <string name="erazi_say">Erazi_say</string>
    <string name="erazi">Ərazi, km<sup><font size="8">2</font></sup></string>
    <string name="dil">Dil</string>
    <string name="diller">diller</string>
    <string name="valyuta">Valyuta</string>
    <string name="valyutalar">valyutalar</string>
    <string name="udm_deyer">udm_deyer</string>
    <string name="udm">ÜDM(dollar)
    </string>
    <string name="tel_kodlari">telkodlari</string>
    <string name="tel_kodu">Telefon kodu</string>
    <string name="qiteler">qiteler</string>
    <string name="qite">Aid olduğu coğrafi bölgə</string>
    <string name="app_haqqinda">APP HAQQINDA</string>
    <string name="sbhapps_terefinden"><b>Sbhapps</b> tərəfindən yaradılıb</string>
    <string name="app_melumatlar">App-da olan bütün məlumatlar 2016-cı ilə aiddir.</string>
    <string name="versiya">1.0</string>
    <string name="app_versiya"><b>App versiya</b></string>
    <string name="e_mail"><b>E-mail</b></string>
    <string name="email_unvan">sabuhiapps@gmail.com</string>
</resources>